[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01"
path = "src/01.rs"

[[bin]]
name = "02"
path = "src/02.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "05"
path = "src/05.rs"

[[bin]]
name = "05-b"
path = "src/05-b.rs"


[dependencies]